fix style on mobile view - contact / blog

--- a/css/main.css
+++ b/css/main.css
@@ -470,29 +470,39 @@ footer .footer-lower i:hover {
 }
 
 .contact-form {
-  background: linear-gradient(rgba(241, 241, 241, 0.7), rgba(161, 161, 161, 0.5));
-}
-.contact-form .right {
-  background: #2bcea8;
+  background: linear-gradient(rgba(241, 241, 241, 0.219), rgba(221, 221, 221, 0.363));
 }
 .contact-form .right .contact-list-details li {
+  padding: 5px 10px;
   font-size: 20px;
   list-style: none;
 }
 .contact-form .right .contact-list-details li i {
+  color: #2bcea8;
+  vertical-align: middle;
   font-size: 30px;
-  margin-right: 25px;
+  padding: 10px;
+}
+.contact-form .right .contact-list-details li span {
+  margin-left: 5px;
+  vertical-align: middle;
+  color: #4B4B4B;
+}
+.contact-form .right h3 {
+  font-weight: 700;
 }
 .contact-form .right .follow-links {
   display: flex;
+  width: min-content;
+  margin: 0 auto;
 }
 .contact-form .right .follow-links li {
   list-style: none;
-  padding-right: 20px;
+  padding: 15px;
 }
 .contact-form .right .follow-links li img {
-  height: 30px;
-  width: 30px;
+  height: 50px;
+  width: 50px;
 }
 
 /*!
