--- a/css/styles/contact.sass
+++ b/css/styles/contact.sass
@@ -1,26 +1,40 @@
 .contact-form
-    background: linear-gradient(rgba(241, 241, 241, 0.7), rgba(161, 161, 161, 0.5))
+    background: linear-gradient(rgba(241, 241, 241, 0.219), rgba(221, 221, 221, 0.363))
 
     // .left
 
     .right
-        background: #2bcea8
+        // background: #2bcea8
 
         .contact-list-details
             li 
+                padding: 5px 10px
                 font-size: 20px
                 list-style: none
 
                 i 
+                    color: #2bcea8
+                    vertical-align: middle
                     font-size: 30px
-                    margin-right: 25px
+                    padding: 10px
+                    // background: red
+
+                span 
+                    margin-left: 5px
+                    vertical-align: middle
+                    color: #4B4B4B
+        h3 
+            font-weight: 700
 
         .follow-links 
             display: flex
+            // background: red
+            width: min-content
+            margin: 0 auto
             li 
                 list-style: none
-                padding-right: 20px
+                padding: 15px
 
                 img 
-                    height: 30px
-                    width: 30px
+                    height: 50px
+                    width: 50px
